--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@zk-kit/eddsa-poseidon": "^1.0.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.2"
   }
 }
