--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
     "incremental": false,
     "isolatedDeclarations": false,
     "isolatedModules": true,
-    "lib": ["es2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "es2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "NodeNext",
     "moduleDetection": "force",
     "moduleResolution": "NodeNext",
